kyverno-awsipmgt-core-package/kyverno-injection-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: CLUSTER_POLICY_NAME
  namespace: kyverno
  annotations:
    policies.kyverno.io/title: Inject Init-Container
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy injects Multus NAD annotation to the OAI POD.
spec:
  rules:
  - name: inject-sidecar
    match:
      any:
      - resources:
          selector:
            matchLabels:
              workload.nephio.org/oai: POD_LABEL_VALUE
          kinds:
            - Pod
          operations:
          - CREATE
          - UPDATE
    mutate:
      patchStrategicMerge:
        spec:
          initContainers:
            - name: awsipmgmt
              image: public.ecr.aws/r8l3e1z0/aws-ip-manager:v0.1
              args: [/bin/sh, -c, '/app/script.sh initContainers']
